2010-05-10 Magnus Hagdorn
 * merged glimmer-cism-gcm r1460:HEAD

2010-05-09 William Lipscomb
 More code cleanup:  Removed most '!lipscomb' comments, and put ifdefs around
	debugging write statements.  The remaining comments indicate where I have
	questions or where there is still work to do.  At this point the code is
	ready to be merged into the glimmer-cism2 trunk.
 * libglide/glide.F90
 * libglide/glide_setup.F90
 * libglide/glimmer_ncio.F90
 * libglide/glide_types.F90
 * libglide/glide_temp.F90
 * libglide/glide_diagnostics.F90
 * libglimmer/glimmer_paramets.F90
 * libglimmer/glimmer_log.F90
 * libglimmer/nc2config.F90
 * libglint/glint_timestep.F90
 * libglint/glint_initialise.F90
 * libglint/glint_interp.F90
 * libglint/glint_global_grid.F90
 * libglint/glint_mbal.F90
 * libglint/glint_mbal_coupling.F90
 * libglint/glint_climate.F90
 * libglint/glint_global_interp.F90
 * libglint/glint_type.F90
 * libglint/glint_main.F90

2010-05-07 Magnus Hagdorn
 * libglide/glide_lithot_vars.def: swap around definitions to reduce diff with
   trunk
 * libglide/glide_vars.def: ditto

2010-05-06 William Lipscomb
 General code cleanup, plus the following specific changes:
 * libglint/glint_main.F90: added subroutines glint_allocate_arrays_ccsm,
	accumulate_averages_ccsm, calculate_averages_ccsm
 * libglint/glint_timestep.F90: added ccsm_smb flag and related logic
 * libglint/glint_interp.F90: added local mask (lmask) for type downscale
 * libglint/glint_climate.F90: added subroutine glint_downscaling_ccsm
 * libglint/glint_mbal_coupling.F90: added subroutine glint_accumulate_ccsm
 * libglint/glint_type.F90: added subroutine glint_i_upscaled_fields_ccsm
 * libglint/glint_global_interp.F90: moved the new CCSM upscaling and downscaling
	subroutines to modules containing similar non-CCSM subroutines
 * libglint/glint_initialise.F90: minor changes
 * libglint/glint_vars.def: changed 'mask' to 'outmask', added 'inmask';
	inmask is true where global input data are valid